--- a/src/main/webapp/i18n/fr/home.json
+++ b/src/main/webapp/i18n/fr/home.json
@@ -1,7 +1,7 @@
 {
   "home": {
-    "title": "Bienvenue, Java Hipster !",
-    "subtitle": "Ceci est votre page d'accueil",
+    "title": "Explorez Votre Chemin, Découvrez Votre Destin!",
+    "subtitle": "Bienvenue!",
     "logged": {
       "message": "Vous êtes connecté en tant que \"{{username}}\"."
     },
